# good_news

news_scraper/: alembic.ini  pyproject.toml
news_scraper/alembic/: env.py
news_scraper/alembic/versions/: 67dfd64eadbe_add_more_columns.py  76743510d66c_initial.py
news_scraper/news_scraper/: database.py  download.py  models.py  news_dataclasses.py  utils.py
